--- a/QuipVid.iOS/QuipVid.iOS.csproj
+++ b/QuipVid.iOS/QuipVid.iOS.csproj
@@ -125,6 +125,9 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\FontAwesome5Solid.otf" />
+    <BundleResource Include="Resources\FontAwesome5Regular.otf" />
+    <BundleResource Include="Resources\FontAwesome5Brands.otf" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
